--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  build_runner: ^2.4.13
+  dio: ^5.7.0
   flutter:
     sdk: flutter
   go_router: ^14.6.1
