--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  dio: ^5.7.0
   flutter:
     sdk: flutter
   go_router: ^14.6.1
+  http: ^1.2.2
   provider: ^6.1.2
   shared_preferences: ^2.3.3
 
